--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,12 +4,12 @@
     <string name="app_name">SchoolTradeClient</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="textview">你的智商餘額已不足，請及時充值。。。。。你的智商餘額已不足，請及時充值。。。。。你的智商餘額已不足，請及時充值。。。。。          </string>
+    <string name="textview">你的余额已不足，請及時充值。。。。。你的余额已不足，請及時充值。。。。。你的余额已不足，請及時充值。。。。。          </string>
     <string name="mycredit">我的信誉</string>
     <string name="myCollection">我的收藏</string>
-    <string name="credit1">0毫无信用</string>
-    <string name="credit2">50信用一般</string>
-    <string name="credit3">信用良好100</string>
+    <string name="credit1">0信用一般</string>
+    <string name="credit2">60信用良好</string>
+    <string name="credit3">100信用极好</string>
     <string name="jmui_action_settings">Settings</string>
     <string name="jmui_about">关于</string>
     <string name="jmui_send">发送</string>
